test_programs/compile_failure/comptime_statement_wrong_type/src/main.nr
fn main() -> pub i64 {
    comptime {
        unsafe { func_1(1) }
    }
}

unconstrained fn func_1(b: i32) -> i32 {
    b                                                                                                                                                             
}